mutants.out.old/log/crates__vault-client-rs__src__types__error.rs_line_79_col_9.log

*** crates/vault-client-rs/src/types/error.rs:79:9: replace <impl From<ParseFloatError> for VaultError>::from -> Self with Default::default()

*** mutation diff:
--- crates/vault-client-rs/src/types/error.rs
+++ replace <impl From<ParseFloatError> for VaultError>::from -> Self with Default::default()
@@ -71,17 +71,17 @@
 impl From<ParseIntError> for VaultError {
     fn from(err: ParseIntError) -> Self {
         Self::Config(format!("integer parse error: {err}"))
     }
 }
 
 impl From<ParseFloatError> for VaultError {
     fn from(err: ParseFloatError) -> Self {
-        Self::Config(format!("float parse error: {err}"))
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl VaultError {
     #[must_use]
     pub fn is_retryable(&self) -> bool {
         match self {
             Self::Http(e) => e.is_timeout() || e.is_connect(),


*** /usr/local/rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/cargo nextest run --no-run --verbose --package=vault-client-rs@0.9.0 --all-features
warning: in config file .config/nextest.toml, ignoring unknown configuration key: profile.default.overrides.0.test-threads
   Compiling vault-client-rs v0.9.0 (/tmp/cargo-mutants-git-source-JRSoMP.tmp/crates/vault-client-rs)
error[E0277]: the trait bound `VaultError: Default` is not satisfied
  --> crates/vault-client-rs/src/types/error.rs:79:9
   |
79 |         Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `VaultError`
  --> crates/vault-client-rs/src/types/error.rs:8:1
   |
 8 | pub enum VaultError {
   | ^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `vault-client-rs` (lib) due to 1 previous error
error: command `/usr/local/rustup/toolchains/1.94-x86_64-unknown-linux-gnu/bin/cargo test --no-run --message-format json-render-diagnostics --package vault-client-rs@0.9.0 --all-features` exited with code 101

*** result: Failure(101)
